--- a/pk-lms/public/index.html
+++ b/pk-lms/public/index.html
@@ -54,7 +54,7 @@
                 <input type="text" id="staffRole" name="role" required>
 
                 <label for="secureLevel">Security Level:</label>
-                <select id="secureLevel" name="seclevel" required>
+                <select id="secureLevel" name="securityLevel" required>
                     <!-- Example options, replace with dynamic data from backend -->
                     <option value="">Select level</option>
                     <option value="level1">1</option>
